--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+public/images/home/hero.png
 public/images/products/colombia_coffee.png
 public/images/products/ethiopia_coffee.png
 public/images/products/guatemala_coffee.png
